@@ -59,7 +59,7 @@ $Date$
 <!ENTITY lfs-vim-version              "7.3">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20120418">
+<!ENTITY blfs-bootscripts-version     "20120420">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
@@ -495,7 +495,7 @@ $Date$
 <!ENTITY ntp-version                  "4.2.6p4">
 <!ENTITY rpcbind-version              "0.2.0">
 <!ENTITY rsync-version                "3.0.9">
-<!ENTITY samba3-version               "3.6.3">
+<!ENTITY samba3-version               "3.6.4">
 <!ENTITY wget-version                 "1.13.4">
 <!ENTITY wireless-tools-version       "29">
 <!ENTITY wpa_supplicant-version       "0.7.3">
