@@ -45,6 +45,9 @@
       <para>April 20th, 2012</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Updated to samba-3.6.4.</para>
+        </listitem>
+        <listitem>
           <para>[krejzi] - Added libosinfo 0.1.1.</para>
         </listitem>
         <listitem>
